# zed-gsam

./: .gitignore  Dockerfile  README.md  cap.py  changing_and_todo.md  common.py  conf_and_depth.py  depth-and-gsam.py  depth.py  depth_and_gsam.py  depth_cmp.py  design_policy.md  docker_build.sh  docker_run.sh  download-egocentric-images.sh  export_all_size.py  gen_copy_script.sh  grounded_sam_demo.sh  gsam.py  gsam_module.py  gsam_movie.py  hsv_view.py  install_zedhelper.sh  on_gsam.md  pyproject.toml  reinstall-opencv.sh  run_hq.sh  run_usbcam.sh  seg.py  setup.cfg  test_cap_and_demo.sh  test_demo1_my.sh  test_demo1_my_no-detection.sh  test_hq.sh  test_pre-captured.sh  todo.md  trouble.md
figures/gsam_figures/: captured_0001_mask.json  captured_0002_mask.json
tutorial_script/: depth-and-gsam.py  view-depth.py
zedhelper/: handmark.py  nparray.py  predefined.py  simpleply.py  util.py
