[metadata]
name = zedhelper
version = 0.0.3
description = ZED SDK helper
author = katsunori-waragai
author_email = waragai.katsunori@borgroid.co.jp
url = https://github.com/katsunori-waragai/ex-zed-sdk
license = Apache Software License
license_file = LICENSE.txt
[options]
packages = find:
install_requires =
    matplotlib
    mediapipe
    numpy
    opencv-python
    scikit-image
