[metadata]
name = zedhelper
version = 0.0.3
description = ZED SDK helper
author = katsunori-waragai
author_email = waragai.katsunori@borgroid.co.jp
url = https://github.com/katsunori-waragai/ex-zed-sdk

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    opencv-python
    scikit-image
